--- a/crowd_detector/config.yaml
+++ b/crowd_detector/config.yaml
@@ -1,4 +1,4 @@
-frame_source: http://114.35.156.187:85/webcapture.jpg?command=snap&channel=1?COUNTER
+frame_source: http://61.214.197.204:1024/-wvhttp-01-/GetOneShot?image_size=640x480&frame_count=1000000000
 
 number_of_frames: 210
 fetch_interval: 3
