--- a/crowd_detector/config.yaml
+++ b/crowd_detector/config.yaml
@@ -1,4 +1,4 @@
-frame_source: http://61.214.197.204:1024/-wvhttp-01-/GetOneShot?image_size=640x480&frame_count=1000000000
+frame_source: http://208.72.70.172/mjpg/1/video.mjpg
 
 number_of_frames: 210
 fetch_interval: 3
