--- a/crowd_orchestrator/docker-compose.yml
+++ b/crowd_orchestrator/docker-compose.yml
@@ -25,3 +25,13 @@ services:
     depends_on:
       - zookeeper
 
+  crowd_orchestrator:
+    build: .
+    container_name: crowd_orchestrator
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    volumes:
+      - .:/myapp
+    ports:
+      - "3000:3000"
+    # depends_on:
+    #   - db
