--- a/crowd_orchestrator/Gemfile
+++ b/crowd_orchestrator/Gemfile
@@ -54,4 +54,7 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'delivery_boy'
+gem 'racecar'
+gem 'faraday'
+gem 'telegram-bot-ruby'
 gem 'tzinfo-data', platforms: %i[mingw mswin x64_mingw jruby]
